<resources>
    <string name="app_name">SenSee</string>
    <string name="text_settings">Settings</string>
	<string name="text_sensors">Sensors</string>
	<string name="text_sensors_description_text">Sensors from which data were collected.</string>
    <string name="text_creating_experiment">Creating Experiment</string>
    <string name="text_viewing_experiment">Viewing Experiment</string>
    <string name="text_viewing_notes">Viewing notes</string>
    <string name="text_viewing_tags">Viewing tags</string>
    <string name="text_viewing_sensors">Viewing sensors</string>
    <string name="text_experiment_tags">Experiment Tags</string>
    <string name="text_tag">Tag</string>
    <string name="text_tags">Tags</string>
    <string name="text_tag_description_text">Events tagged during the experiment run.</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_clear">Clear</string>
    <string name="text_clone">Clone</string>
    <string name="text_more_more">More >></string>
    <string name="text_experiment_has_no_sensors">Experiment has no sensors</string>
    <string name="text_experiment_has_no_notes">Experiment has no notes</string>
    <string name="text_experiment_has_no_tags">Experiment has no tags</string>
    <string name="text_sensor_has_not_recorded_any_data">Sensor has not recorded any data</string>
    <string name="text_experiment">Experiment</string>
    <string name="text_back">Back</string>
    <string name="text_sensor_properties">Sensor Properties</string>
    <string name="text_vendor">Vendor</string>
    <string name="text_sampling_rate">Sampling Rate</string>
    <string name="text_number_10">10</string>
    <string name="text_not_applicable">Not Applicable</string>
    <string name="text_place_holder">Place Holder</string>
    <string name="text_name">Name:</string>
    <string name="text_version">Version</string>
    <string name="text_resolution">Resolution</string>
    <string name="text_power_consumption">Power Consumption</string>
    <string name="text_maximum_range">Maximum Range</string>
    <string name="text_minimum_sample_delay">Minimum Sample Delay</string>
    <string name="text_android_sensor_type">Android Sensor Type</string>
    <string name="text_notes">Notes</string>
    <string name="text_notes_description_text">Notes taken for the experiment.</string>
    <string name="text_expand">Expand</string>
    <string name="text_running_experiment">Running Experiment</string>
    <string name="text_done">Done</string>
    <string name="text_experiment_properties">Experiment Properties</string>
    <string name="text_run">Run</string>
    <string name="text_description">Description</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_select_a_sensor_to_the_experiment">
        Select sensors to the experiment
    </string>
    <string name="text_sensor_list_instruction">Tap a sensor to view more</string>
    <string name="text_check_all">Check/Clear all</string>
    <string name="text_sensors_on_the_device">Sensors on the Devices</string>
    <string name="text_create_new_experiment">Create New Experiment</string>
    <string name="text_add_tag">Add Tag</string>
    <string name="text_creating_notes">Creating Notes</string>
    <string name="text_selecting_sensors">Selecting Sensors</string>
    <string name="text_creating_tags">Creating Tags</string>
    <string name="text_write_a_note_for_the_experiment">
        Write a note for the experiment
    </string>
    <string name="text_tag_here_for_more">Tap here for more &#8230;</string>
    <string name="text_tap_to_see_more_notes">Tap to see more about the notes.</string>
    <string name="text_tap_to_see_more_sensors">Tap to see more about the sensors.</string>
    <string name="text_no_notes_were_taken">
        No notes were taken for the experiment.
    </string>
    <string name="text_no_tagging_action_performed">
        No tagging actions were performed during the experiment.
    </string>
    <string name="text_tags_plus">
        , and %1$d more &#8230;
    </string>
    <string name="text_experiment_collect_data_from">
       	The experiment collected data from a few selected sensors.
    </string>
    <string name="text_no_sensors_were_selected">
        No sensors were selected for data collection in the experiment. 
    </string>
    <string name="text_image_icon">Image Icon</string>
    <string name="text_run_tag_operation_text">
        Mark important events during an experimental run.
    </string>
    <string name="text_run_note_operation_text">
        Log general information about an experiment.
    </string>
    <string name="text_run_sensor_operation_text">
        Configure the sensors to use during the experiment.
    </string>
    <string name="text_run_datastore_operation_text">
        Choose a data storage method.
    </string>
    <string name="text_running_in_background">
        Data collection is running in background.
    </string>
    <string name="text_select_a_data_store_for_the_experiment">
        Select a data store for the experiment.
    </string>
    <string name="text_data_store">Data Store</string>
    <string name="text_is_sleeping">is sleeping</string>
    <string name="text_from">From</string>
    <string name="text_to">To</string>
    <string name="text_note_x_of_y_taken_at_time_z">Note %1$d of %2$d taken at %3$s</string>
    <string name="text_for_experiment_name_x">Experiment: %1$s</string>
    <string name="text_no_notes">No notes</string>
    <string name="text_sensor_and_sensor_data">Sensor and Sensor Data</string>
    <string name="text_add_note">Add Note</string>
    <string name="text_set_parameter">Set Parameter(s)</string>
    <string name="text_sampling_rate_is_now_x">The sampling rate is now set to $1%f samples/second.</string>
	<string name="text_local_service_started">SDCRunExperimentService started.</string>
    <string name="text_local_service_stopped">SDCRunExperimentService stopped.</string>
    <string name="text_local_service_label">SDCRunExperimentService</string>
    <string name="text_clear_selection">Clear Selection</string>
    <string name="text_do_you_want_to_stop_experiment">
        Do you want to stop the experiment?
    </string>
    <string name="text_do_you_want_to_leave_experiment">
        Do you want to leave the experiment setup? All data will be lost.
    </string>
    <string name="text_need_to_select_sensors">
        Select at least one sensor before running the experiment.
    </string>
    <string name="text_dismiss">
        Dismiss
    </string>
    <string name="text_leave_experiment">Leave Experiment</string>
    <string name="text_stop_experiment">Stop Experiment</string>
    <string name="text_continue_experiment">Continue Experiment</string>
    <string name="text_stopping_experiment">Stopping the experiment &#8230;</string>
    <string name="text_continuing_experiment">Continuing the experiment &#8230;</string>
    <string name="text_simple_xml_file_store">Simple XML File Store</string>
    <string name="text_simple_file_store">Simple File Store</string>
    <string name="text_simple_xml_file_store_subtext_text">Store the experiment meta data in an XML file.</string>
    <string name="text_simple_file_store_subtext_text">Store the experiment meta data in an unstructured text file.</string>
    <string name="text_link_to_dropbox">Link to Dropbox</string>
    <string name="text_unlink_from_dropbox">Unlink from Dropbox</string>
    <string name="text_send_to_dropbox">Send to Dropbox</string>
	<string name="text_do_not_link_to_dropbox">Do not link to Dropbox</string>
	<string name="text_dropbox_not_yet_linked_explanation">A Dropbox account is not yet linked with this app. A
	    fter linking a Dropbox account, you can upload your experiment data to Dropbox. Would you like to do this now?</string>
    <string name="text_sending_experiment_to_dropbox">Sending Experiment to Dropbox</string>
    <string name="text_not_linked_to_dropbox_account">Not linked to a Dropbox account</string>
    <string name="text_experiment_successfully_sent_to_dropbox">Experiment successfully sent to Dropbox.</string>
    <string name="text_failed_to_send_experiment_to_dropbox">Failed to send experiment to Dropbox.</string>
    <string name="text_unknown_path_for_experiment">Unknown path for experiment.</string>
    <string name="text_unsupported_experiment_datastore">Unsupported Experiment Datastore</string>
    <string name="text_successfully_unlinked_from_dropbox">Successfully unlinked from Dropbox.</string>
    <string name="text_successfully_linked_to_dropbox">Successfully linked to Dropbox.</string>
    <string name="text_could_not_authenticate_with_dropbox">Could not authenticate with Dropbox:</string>
	<string name="text_audio_channel_in">Audio Channel-In</string>
    <string name="text_channel_in_back">Channel in back</string>
    <string name="text_channel_in_back_processed">Channel-in back processed</string>
    <string name="text_channel_in_default">Channel in default</string>
    <string name="text_channel_in_front">Channel in front</string>
    <string name="text_channel_in_front_processed">Channel in front processed</string>
	<string name="text_channel_in_left">Channel in left</string>
	<string name="text_channel_in_left_processed">Channel in left processed</string>
	<string name="text_channel_in_mono">Channel in mono</string>
	<string name="text_channel_in_pressure">Channel in pressure</string>
	<string name="text_channel_in_right">Channel in right</string>
	<string name="text_channel_in_right_processed">Channel in right processed</string>
	<string name="text_channel_in_stereo">Channel in stereo</string>
	<string name="text_channel_in_voice_dnlink">Channel in voice downlink</string>
	<string name="text_channel_in_voice_uplink">Channel in voice uplink</string>
	<string name="text_channel_in_x_axis">Channel in X axis</string>
	<string name="text_channel_in_y_axis">Channel in Y axis</string>
	<string name="text_channel_in_z_axis">Channel in Z axis</string>
	<string name="text_audio_encoding">Audio Encoding</string>
	<string name="text_audio_encoding_default">Encoding Default</string>
	<string name="text_audio_encoding_pcm_16bit">Encoding PCM 16bit</string>
	<string name="text_audio_encoding_pcm_8bit">Encoding PCM 8bit</string>
	<string name="text_audio_source">Audio Source</string>
	<string name="text_audio_source_mic">Microphone</string>
	<string name="text_audio_source_camcorder">Camcorder</string>
	<string name="text_audio_source_default">Default</string>
	<string name="text_audio_sampling_rate">Sampling Rate</string>
	<string name="text_audio_min_buffer_size">Minimum Buffer Size</string>
	<string name="text_sensor_type_x_not_handled">Handling of sensor type %1$d is yet to be implemented.</string>
	<string name="text_ok">OK</string>
	<string name="text_select_audio_channel_in">Select an audio channel</string>
	<string name="text_tap_to_change_setting">Tap to change setting</string>
	<string name="text_sensor_has_more_data">&#8230; more data available, but not displayed &#8230;</string>
	<string name="text_does_support_viewing_audio_sensor_data">This app does not support viewing audio sensor data.</string>
	<string name="text_discover_sensors_text">Probing sensors &#8230; It may take two minutes.</string>
	<string name="text_enter_a_tag">Please enter a tag.</string>
	<string name="text_tag_must_be_unique">Tags must be unique.</string>
	<string name="text_audio_sensor_probing_activity">Probing Sensors</string>
	<string name="text_about">About</string>
	<string name="text_title_about">About SenSee</string>
</resources>