<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp" >

    <Button
        android:id="@+id/btn_confirm_sensor_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_confirm" />

    <Button
        android:id="@+id/btn_cancel_sensor_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_clear" />

    <Button
        android:id="@+id/btn_back_to_setup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_back" />

</LinearLayout>
