<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/layout_experiment_note_viewing_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="left|center_vertical"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">                

        <TextView
            android:id="@+id/textview_experiment_note_viewing_subtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:textSize="14sp"
            android:text="@string/text_for_experiment_name_x"/>
    </RelativeLayout>
    
    
    <TableLayout
        android:id="@+id/layout_experiment_note_viewing_experiment_times"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_experiment_note_viewing_heading"
        android:layout_alignLeft="@id/layout_experiment_note_viewing_heading"
        android:layout_marginTop="8dp">
        <TableRow>
            <TextView
                android:text="@string/text_from"
                android:textSize="12sp"
                android:gravity="left"
                android:layout_weight="1"/>
            <TextView 
                android:text="@string/text_to"
                android:textSize="12sp"
                android:gravity="left"
                android:layout_weight="1"/>
        </TableRow>
      
        <TableRow>
		    <TextView
		        android:id="@+id/textview_fragment_experiment_view_notes_experiment_time_created"
		        android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="left"
                android:textSize="12sp"
		        android:text="@string/text_experiment"
		        android:layout_weight="1"/>   
		    <TextView
		        android:id="@+id/textview_fragment_experiment_view_notes_experiment_time_done"
		        android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="left"
                android:textSize="12sp"
		        android:text="@string/text_experiment"
		        android:layout_weight="1"/> 		                   
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textview_fragment_experiment_view_notes_note_caption"
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/layout_experiment_note_viewing_experiment_times"
		android:layout_alignLeft="@id/layout_experiment_note_viewing_experiment_times"
		android:gravity="left"
		android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/text_note_x_of_y_taken_at_time_z"/>   


        
    <TextView
        android:id="@+id/textview_fragment_experiment_view_notes_note_text"
        android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/textview_fragment_experiment_view_notes_note_caption"
		android:layout_alignLeft="@id/layout_experiment_note_viewing_heading"
		android:layout_alignRight="@id/layout_experiment_note_viewing_heading"
		android:layout_marginBottom="24dp"
		android:gravity="left|top"
		android:textColor="@color/DarkTextViewFont"		
		android:background="@drawable/layerlist_background_border_lines"
		android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/text_experiment"/>     
                      
</RelativeLayout>
