<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textview_experiment_view_experiment_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/text_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <RelativeLayout
        android:id="@+id/layout_experiment_view_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:layout_below="@id/textview_experiment_view_experiment_name">

        <ImageView
            android:id="@+id/imageview_experiment_view_tag_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="12dp"
            android:contentDescription="@string/text_tags"
            android:src="@drawable/icon_tags"/>

        <TextView
            android:id="@+id/textview_experiment_view_tag_maintext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/imageview_experiment_view_tag_image"
            android:textSize="20sp" 
            android:text="@string/text_tags"/>

        <TextView
            android:id="@+id/textview_experiment_view_tag_subtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_experiment_view_tag_maintext"
            android:layout_alignLeft="@+id/textview_experiment_view_tag_maintext"
            android:textSize="12sp" 
            android:text="@string/text_tag_description_text"
            android:ellipsize="end"
            android:scrollHorizontally="false"
            android:maxLines="1"/>
        
	    <LinearLayout
	        android:id="@+id/layout_experiment_view_tag_list"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginRight="24dp"
	        android:layout_below="@+id/textview_experiment_view_tag_subtext"
	        android:layout_alignLeft="@id/textview_experiment_view_tag_subtext"/>
    </RelativeLayout> 
    
    
	<RelativeLayout
	    android:id="@+id/layout_experiment_view_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:layout_below="@id/layout_experiment_view_tags">

        <ImageView
            android:id="@+id/imageview_experiment_view_notes_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/icon_notes"
            android:contentDescription="@string/text_notes"/>

        <TextView
            android:id="@+id/textview_experiment_view_notes_maintext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/imageview_experiment_view_notes_image"
            android:textSize="20sp" 
            android:text="@string/text_notes"/>

        <TextView
            android:id="@+id/textview_experiment_view_notes_subtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_experiment_view_notes_maintext"
            android:layout_alignLeft="@+id/textview_experiment_view_notes_maintext"
            android:textSize="12sp" 
            android:text="@string/text_notes_description_text"
            android:ellipsize="end"
            android:scrollHorizontally="false"
            android:maxLines="1"/>
        
	    <LinearLayout
	        android:id="@+id/layout_experiment_view_note_list"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginRight="24dp"
	        android:layout_below="@+id/textview_experiment_view_notes_subtext"
	        android:layout_alignLeft="@id/textview_experiment_view_notes_subtext"/>
        
    </RelativeLayout>     
    

<RelativeLayout
	    android:id="@+id/layout_experiment_view_sensors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:layout_below="@id/layout_experiment_view_notes"
        android:layout_above="@+id/layout_experiment_view_buttons">

        <ImageView
            android:id="@+id/imageview_experiment_view_sensors_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/icon_sensors"
            android:contentDescription="@string/text_sensors"/>

        <TextView
            android:id="@+id/textview_experiment_view_sensors_maintext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/imageview_experiment_view_sensors_image"
            android:textSize="20sp" 
            android:text="@string/text_sensors"/>

        <TextView
            android:id="@+id/textview_experiment_view_sensors_subtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_experiment_view_sensors_maintext"
            android:layout_alignLeft="@+id/textview_experiment_view_sensors_maintext"
            android:textSize="12sp" 
            android:text="@string/text_sensors_description_text"
            android:ellipsize="end"
            android:scrollHorizontally="false"
            android:maxLines="1"/>
        
	    <LinearLayout
	        android:id="@+id/layout_experiment_view_sensor_list"
	        android:layout_width="match_parent"
	        android:layout_height="fill_parent"
	        android:orientation="vertical"
	        android:layout_marginRight="24dp"	        
	        android:layout_below="@+id/textview_experiment_view_sensors_subtext"
	        android:layout_alignLeft="@id/textview_experiment_view_sensors_subtext"/>

    </RelativeLayout>
	
	
    

    <RelativeLayout
        android:id="@id/layout_experiment_view_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="0dp" >

        <Button
            android:id="@+id/button_experiment_view_clone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/text_clone" />

        <Button
            android:id="@+id/button_experiment_view_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_toRightOf="@+id/button_experiment_view_clone"
            android:text="@string/text_back" />
    </RelativeLayout>
    

</RelativeLayout>
